add gem rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,6 @@
 require:
   - rubocop-rails
+  - rubocop-rspec
 
 AllCops:
  TargetRubyVersion: 2.7
@@ -10,6 +11,7 @@ AllCops:
    - 'db/**/*'
    - 'config/**/*'
    - 'spec/rails_helper.rb'
+   - 'spec/spec_helper.rb'
 
 Style/Documentation:
  Enabled: false
