--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,7 @@
+inherit_from:
+  - .rubocop_todo.yml
+  - .rubocop_strict.yml
+
 require:
   - rubocop-rails
   - rubocop-rspec
@@ -23,39 +27,4 @@ Layout/LineLength:
   Max: 120
 
 Metrics/MethodLength:
-  Max: 20
-
-# Layout/EmptyLinesAroundAttributeAccessor:
-#   Enabled: true
-# Layout/SpaceAroundMethodCallOperator:
-#   Enabled: true
-# Lint/DeprecatedOpenSSLConstant:
-#   Enabled: true
-# Lint/MixedRegexpCaptureTypes:
-#   Enabled: true
-# Lint/RaiseException:
-#   Enabled: true
-# Lint/StructNewOverride:
-#   Enabled: true
-# Style/AsciiComments:
-#   Enabled: false
-# Style/ExponentialNotation:
-#   Enabled: true
-# Style/HashEachMethods:
-#   Enabled: true
-# Style/HashTransformKeys:
-#   Enabled: true
-# Style/HashTransformValues:
-#   Enabled: true
-# Style/RedundantRegexpCharacterClass:
-#   Enabled: true
-# Style/RedundantRegexpEscape:
-#   Enabled: true
-# Style/SlicingWithRange:
-#   Enabled: true
-Style/ClassAndModuleChildren:
-  Enabled: false
-# Style/RaiseArgs:
-#   Enabled: false
-# Style/ConditionalAssignment:
-#   Enabled: false
+  Max: 50
